<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_info_proyecto"
        tools:context="io.dynamic_softworks.icost.ActivityInfoProyecto"
        android:weightSum="1">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/project_name_label"
            android:id="@+id/textView73"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/project_name_placeholder"
            android:id="@+id/textView74"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sprint_duration_label"
            android:id="@+id/textView75"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/number_placeholder"
            android:id="@+id/textView76"/>

    <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.10"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_project_team"
            android:id="@+id/info_proyecto_boton_ver_usuarios"
            />

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_project_user_stories"
            android:id="@+id/info_proyecto_boton_ver_userstories"
            />

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_project_releases"
            android:id="@+id/info_proyecto_boton_ver_releases"
            />
</LinearLayout>
