<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_nuevo_user_story"
        tools:context="io.dynamic_softworks.icost.ActivityNuevoUserStory"
        android:weightSum="1">


    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nombre_nuevo_user_story"
                android:hint="@string/nombre_user_story"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:maxLines="1"
                android:singleLine="true"
                android:layout_alignParentEnd="true"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/user_story_priority_prompt"
                android:singleLine="true"
                android:maxLines="1"
                />

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:inputType="number"
                android:text="@string/user_story_priority_default"
                android:ems="2"
                android:textAlignment="textEnd"
                android:id="@+id/prioridad_nuevo_user_story"
                android:layout_weight="0.15"/>

    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/user_story_points_prompt"
                android:singleLine="true"
                android:maxLines="1"
                />

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:inputType="number"
                android:text="@string/user_story_priority_default"
                android:ems="2"
                android:textAlignment="textEnd"
                android:id="@+id/puntaje_nuevo_user_story"
                android:layout_weight="0.15"/>

    </LinearLayout>

    <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.10"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/register_user_story"
                android:id="@+id/boton_registrar_nuevo_user_story"/>

        <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:id="@+id/boton_cancelar_nuevo_userstory"/>
    </LinearLayout>

</LinearLayout>
