<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_register_new_user"
        tools:context="io.dynamic_softworks.icost.RegisterNewUser">

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/view">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/prompt_name"
                android:id="@+id/new_user_name"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:maxLines="1"
                android:singleLine="true"
                />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view"
            android:layout_alignParentStart="true"
            android:id="@+id/view2">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/prompt_email"
                android:ems="10"
                android:id="@+id/new_user_email"
                android:layout_below="@+id/new_user_name"
                android:layout_alignParentStart="true"
                android:layout_alignEnd="@+id/new_user_name"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view2"
            android:layout_alignParentEnd="true"
            android:id="@+id/view3">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/prompt_password"
                android:fontFamily="sans-serif"
                android:ems="10"
                android:id="@+id/new_user_password"
                android:layout_below="@+id/new_user_email"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view3"
            android:layout_alignParentStart="true"
            android:id="@+id/view4">
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/prompt_password_again"
                android:fontFamily="sans-serif"
                android:ems="10"
                android:id="@+id/new_user_password2"
                android:layout_below="@+id/new_user_password"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"/>
    </android.support.design.widget.TextInputLayout>

    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user_is_system_administrator"
            android:id="@+id/checkbox_user_sysdamin"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"/>

    <Space
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/space"
            android:layout_below="@+id/checkbox_user_sysdamin"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/button_register_new_user"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_user"
            android:id="@+id/button_register_new_user"
            android:layout_below="@+id/space"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"/>


</RelativeLayout>
