<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_cambiar_user_stories_sprint"
        tools:context="io.dynamic_softworks.icost.ActivityCambiarUserStoriesSprint">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sprint_incoming_user_stories_prompt"
            android:id="@+id/textView47"
            />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/scrollView8"
            android:layout_weight="0.4">

        <LinearLayout
                android:orientation="vertical"
                android:id="@+id/cambio_sprint_lista_user_stories_entrantes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_story_name_placeholder"
                    android:id="@+id/checkBox9"/>

            <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_story_name_placeholder"
                    android:id="@+id/checkBox10"
                    />

            <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_story_name_placeholder"
                    android:id="@+id/checkBox11"/>

            <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_story_name_placeholder"
                    android:id="@+id/checkBox12"/>

        </LinearLayout>
    </ScrollView>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sprint_outgoing_user_stories_prompt"
            android:id="@+id/textView23"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/scrollView14"
            android:layout_weight="0.4">

        <LinearLayout
                android:orientation="vertical"
                android:id="@+id/cambio_sprint_lista_user_stories_salientes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_story_name_placeholder"
                    android:id="@+id/checkBox13"/>

            <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_story_name_placeholder"
                    android:id="@+id/checkBox14"/>

            <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_story_name_placeholder"
                    android:id="@+id/checkBox15"/>

            <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_story_name_placeholder"
                    android:id="@+id/checkBox16"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/update_sprint"
                android:id="@+id/boton_actualizar_sprint"/>

        <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:id="@+id/boton_cancelar_cambios_sprint"/>
    </LinearLayout>

</LinearLayout>
